harbor/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
spec:
  ingressClassName: nginx
  rules:
    - host: harbor.local  # 로컬 도메인 설정
      # 실제 도메인 설정을 사용하려면 위의 도메인을 주석 처리하고 아래 도메인을 사용
      # host: harbor.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 80
  tls:
    - hosts:
        - harbor.local  # 로컬 도메인 설정
      # 실제 도메인 설정을 사용하려면 위의 도메인을 주석 처리하고 아래 도메인을 사용
      # - harbor.example.com
      secretName: harbor-tls
